# app.js
@@ -4,6 +4,7 @@ const mongoose = require('mongoose');
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./src/swagger/swagger.json');
 const cors = require('cors');
+const passport = require('passport');
 
 dotenv.config();
 
@@ -11,16 +12,30 @@ const app = express();
 app.use(cors());
 app.use(express.json());
 
+// Passport config 
+require('./src/config/passport');
+
+app.use(passport.initialize());
+
+// MongoDB
 mongoose.connect(process.env.MONGODB_URI)
   .then(() => console.log('MongoDB connected'))
   .catch(err => console.error(err));
 
+// Rotas
 const productRoutes = require('./src/routes/productRoutes');
 const categoryRoutes = require('./src/routes/categoryRoutes');
+const userRoutes = require('./src/routes/userRoutes');
+const orderRoutes = require('./src/routes/orderRoutes');
+const authRoutes = require('./src/routes/authRoutes');
 
 app.use('/products', productRoutes);
 app.use('/categories', categoryRoutes);
+app.use('/users', userRoutes);
+app.use('/orders', orderRoutes);
+app.use('/auth', authRoutes);
 
+// Swagger
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 const PORT = process.env.PORT || 8080;
